--- a/css/responsive.css
+++ b/css/responsive.css
@@ -65,4 +65,7 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+  .gallery-section .gallery-item-img img {
+    max-width: 260px;
+  }
 }
